; ModuleID = '/home/carl/AnghaBench/linux/mm/kasan/extr_quarantine.c_per_cpu_remove_cache.c'
source_filename = "/home/carl/AnghaBench/linux/mm/kasan/extr_quarantine.c_per_cpu_remove_cache.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.qlist_head = type { i32 }
%struct.kmem_cache = type { i32 }

@QLIST_INIT = common dso_local global %struct.qlist_head zeroinitializer, align 4
@cpu_quarantine = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @per_cpu_remove_cache to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @per_cpu_remove_cache(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.kmem_cache*, align 8
  %4 = alloca %struct.qlist_head, align 4
  %5 = alloca %struct.qlist_head*, align 8
  store i8* %0, i8** %2, align 8
  %6 = load i8*, i8** %2, align 8
  %7 = bitcast i8* %6 to %struct.kmem_cache*
  store %struct.kmem_cache* %7, %struct.kmem_cache** %3, align 8
  %8 = bitcast %struct.qlist_head* %4 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %8, i8* align 4 bitcast (%struct.qlist_head* @QLIST_INIT to i8*), i64 4, i1 false)
  %9 = call %struct.qlist_head* @this_cpu_ptr(i32* @cpu_quarantine)
  store %struct.qlist_head* %9, %struct.qlist_head** %5, align 8
  %10 = load %struct.qlist_head*, %struct.qlist_head** %5, align 8
  %11 = load %struct.kmem_cache*, %struct.kmem_cache** %3, align 8
  %12 = call i32 @qlist_move_cache(%struct.qlist_head* %10, %struct.qlist_head* %4, %struct.kmem_cache* %11)
  %13 = load %struct.kmem_cache*, %struct.kmem_cache** %3, align 8
  %14 = call i32 @qlist_free_all(%struct.qlist_head* %4, %struct.kmem_cache* %13)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local %struct.qlist_head* @this_cpu_ptr(i32*) #2

declare dso_local i32 @qlist_move_cache(%struct.qlist_head*, %struct.qlist_head*, %struct.kmem_cache*) #2

declare dso_local i32 @qlist_free_all(%struct.qlist_head*, %struct.kmem_cache*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
